log
Fri 22 Mar 2024 01:02:22 AM UTC: 
 tests:  0|5
total_score: 0/70
967abd6
Fri 22 Mar 2024 01:02:40 AM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c:60:5: error: redefinition of ‘sumaLista’
   60 | int sumaLista(List *L) {
      |     ^~~~~~~~~
exercises.c:44:5: note: previous definition of ‘sumaLista’ with type ‘int(List *)’
   44 | int sumaLista(List *L) {
      |     ^~~~~~~~~
test.c: In function ‘test_crea_lista’:
test.c:61:15: error: implicit declaration of function ‘crea_lista’; did you mean ‘create_list’? [-Werror=implicit-function-declaration]
   61 |     List* L = crea_lista();
      |               ^~~~~~~~~~
      |               create_list
test.c:61:15: error: initialization of ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
ec6c102
Fri 22 Mar 2024 01:02:54 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c:60:5: error: redefinition of ‘sumaLista’
   60 | int sumaLista(List *L) {
      |     ^~~~~~~~~
exercises.c:44:5: note: previous definition of ‘sumaLista’ with type ‘int(List *)’
   44 | int sumaLista(List *L) {
      |     ^~~~~~~~~
test.c: In function ‘test_crea_lista’:
test.c:61:15: error: implicit declaration of function ‘crea_lista’; did you mean ‘create_list’? [-Werror=implicit-function-declaration]
   61 |     List* L = crea_lista();
      |               ^~~~~~~~~~
      |               create_list
test.c:61:15: error: initialization of ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
1894f00
Fri 22 Mar 2024 01:03:52 AM UTC: 
 exercises.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |         push_back(L, elemento); // Agregar el puntero del elemento a la lista
      |         ^~~~~~~~~
      |         pushBack
cc1: all warnings being treated as errors
Compilation failed
1cdf3f4
Fri 22 Mar 2024 01:04:54 AM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:9: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |         push_back(L, elemento); // Agrega el puntero del elemento a la lista
      |         ^~~~~~~~~
      |         pushBack
cc1: all warnings being treated as errors
Compilation failed
987c07b
